flux/apps/langfuse/app/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - langfuse.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: langfuse-web
          port: 3000
          weight: 1
