flux/apps/langfuse/app/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: langfuse
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: langfuse
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway
            gateway.envoyproxy.io/owning-gateway-name: private-gateway
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "3030"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            cnpg.io/cluster: pg-langfuse
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            app.kubernetes.io/instance: langfuse-valkey
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: langfuse
            clickhouse.com/role: clickhouse-server
      toPorts:
        - ports:
            - port: "8123"
              protocol: TCP
            - port: "9000"
              protocol: TCP
    - toFQDNs:
        - matchName: s3.nahsi.dev
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toFQDNs:
        - matchName: auth.nahsi.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway
      toPorts:
        - ports:
            - port: "10443"
              protocol: TCP
